--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       Hey , I am Aashima</h2>
       <br>
 
-      <a href="resume.pdf" download="ashima-wadhwa" style="text-decoration: none" target="_blank"><h2 class="logo-2">
+      <a href="Aashima Wadhwa.pdf" download="ashima-wadhwa" style="text-decoration: none" target="_blank"><h2 class="logo-2">
           
         Know me more by a click</h2>   </a>
           
